<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg_color"
    tools:context=".presentation.screens.home.ui.fragment.HomeFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/home_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/AppToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <com.harismexis.breakingbad.presentation.widget.CustomSearchView
                        android:id="@+id/searchView"
                        style="@style/SearchViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:iconifiedByDefault="false"
                        android:queryHint="Search"
                        app:theme="@style/SearchViewTheme" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingTop="@dimen/home_list_padding_vertical"
                android:paddingBottom="@dimen/home_list_padding_vertical"
                android:visibility="gone" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/no_results"
            style="@style/BaseTxtv"
            android:layout_gravity="center"
            android:text="No results"
            android:textSize="16sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/loading_progress_size"
            android:layout_height="@dimen/loading_progress_size"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="visible" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu_nav" />

</androidx.drawerlayout.widget.DrawerLayout>

