<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vh_item_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/vh_actor_padding_horizontal"
    android:paddingTop="@dimen/vh_actor_padding_vertical"
    android:paddingEnd="@dimen/vh_actor_padding_horizontal"
    android:paddingBottom="@dimen/vh_actor_padding_vertical">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="@dimen/vh_actor_img_width"
        android:layout_height="@dimen/vh_actor_img_height"
        android:contentDescription="@string/content_description_character_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title"
        style="@style/VhBaseTitle"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imgView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />

    <TextView
        android:id="@+id/txt_meta"
        style="@style/VhBaseMeta"
        android:layout_marginTop="@dimen/vh_item_txt_meta_margin_top"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imgView"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        tools:text="Metadata" />

</androidx.constraintlayout.widget.ConstraintLayout>
